Fixing header z-index

--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -9,6 +9,7 @@
   padding: 0 20px;
   font-size: 1rem;
   position: fixed;
+  z-index: 10;
 
   @mixin atMedium {
     padding: 0 8rem;
